[gd_scene load_steps=7 format=2]

[ext_resource path="res://GetLessonID.gd" type="Script" id=1]
[ext_resource path="res://DownloadLesson.gd" type="Script" id=2]
[ext_resource path="res://OpenLesson.gd" type="Script" id=3]
[ext_resource path="res://Server.gd" type="Script" id=4]
[ext_resource path="res://TestSharp.cs" type="Script" id=5]
[ext_resource path="res://ToolsButton.gd" type="Script" id=6]

[node name="FirstClientScene" type="Node"]

[node name="Server" type="Node" parent="."]
script = ExtResource( 4 )

[node name="DownloadLesson" type="Node" parent="."]

[node name="GetLessonID" type="Node" parent="DownloadLesson"]
script = ExtResource( 1 )

[node name="OpenLesson" type="Node" parent="DownloadLesson"]
script = ExtResource( 3 )

[node name="DownloadLesson" type="Node" parent="DownloadLesson"]
script = ExtResource( 2 )

[node name="ToolsButton" type="Button" parent="."]
margin_top = 1.0
margin_right = 474.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 646, 348 )
text = "Restart"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TestSharp" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="open_lesson" from="DownloadLesson/GetLessonID" to="DownloadLesson/OpenLesson" method="_on_GetLessonID_open_lesson"]
[connection signal="download_lesson" from="DownloadLesson/OpenLesson" to="DownloadLesson/DownloadLesson" method="_on_OpenLesson_download_lesson"]
[connection signal="lesson_downloaded" from="DownloadLesson/DownloadLesson" to="DownloadLesson/OpenLesson" method="_on_DownloadLesson_lesson_downloaded"]
[connection signal="pressed" from="ToolsButton" to="ToolsButton" method="_on_ToolsButton_pressed"]
[connection signal="restart_tools" from="ToolsButton" to="DownloadLesson/DownloadLesson" method="_on_ToolsButton_restart_tools"]
[connection signal="restart_tools" from="ToolsButton" to="DownloadLesson/OpenLesson" method="_on_ToolsButton_restart_tools"]
[connection signal="restart_tools" from="ToolsButton" to="Server" method="_on_ToolsButton_restart_tools"]
[connection signal="restart_tools" from="ToolsButton" to="DownloadLesson/GetLessonID" method="_on_ToolsButton_restart_tools"]
